CI/CD, description for Swagger and refactoring